--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
+    "vue-template-compiler": "^2.5.11",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
