--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "vue": "^2.5.2",
+    "vue-property-decorator": "^6.0.0",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^2.4.0"
