--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.5.2",
-    "vuex": "^2.4.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -35,6 +35,7 @@
     "todomvc-common": "^1.0.4",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
+    "vuex-class": "^0.3.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
