--- a/package.json
+++ b/package.json
@@ -28,6 +28,16 @@
     "eslint": "^4.5.0",
     "eslint-plugin-react": "^7.3.0",
     "file-loader": "^0.9.0",
+    "karma": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-shim": "^1.5.0",
+    "karma-sinon-chai": "^1.3.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^2.0.9",
+    "mocha": "^4.1.0",
     "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "sass-loader": "^5.0.1",
