--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "test": "npm run unit"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -23,10 +25,12 @@
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "eslint": "^4.5.0",
     "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
     "karma": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -41,12 +45,15 @@
     "node-sass": "^4.5.0",
     "path": "^0.12.7",
     "sass-loader": "^5.0.1",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0",
     "todomvc-app-css": "^2.1.0",
     "todomvc-common": "^1.0.4",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
     "vuex-class": "^0.3.0",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.1"
   }
 }
